# albert_kde_contacts

./: CMakeLists.txt  README.md  TODO.md  justfile  metadata.json
doc/: TODO.md
src/: Collection.cpp  Collection.h  CollectionItem.cpp  CollectionItem.h  ContactItem.cpp  ContactItem.h  configwidget.cpp  configwidget.h  configwidget.ui  plugin.cpp  plugin.h
